--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -3,16 +3,29 @@ name: Docker Image CI
 on:
   push:
     branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
 
 jobs:
 
-  build:
+  e2e-tests:
 
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v4
+    - name: Checkout repo
+      uses: actions/checkout@v4
+
+    - name: SetUp Docker  
+      uses: docker/setup-buildx-action@v3
+
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
+      run: docker build -t playwright-tests -f ./dockerfile
+
+    - name: Run E2E tests
+      run: docker run --rm playwright-tests
+
+    - name: Upload test report
+      uses: actions/upload-artifact@v4
+      with:
+          name: playwright-report
+          path: playwright-report
+
