--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "scripts": {},
+  "scripts": {
+      "test": "npx playwright test",
+      "test:ci": "npx playwright install --with-deps && npx playwright test"
+  },
   "keywords": [],
   "author": "Mounika Karicharla",
   "license": "ISC",
