--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -18,7 +18,7 @@ jobs:
       uses: docker/setup-buildx-action@v3
 
     - name: Build the Docker image
-      run: docker build -t playwright-tests -f ./dockerfile
+      run: docker build -t playwright-tests -f ./dockerfile .
 
     - name: Run E2E tests
       run: docker run --rm playwright-tests
