--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -26,6 +26,6 @@ jobs:
     - name: Upload test report
       uses: actions/upload-artifact@v4
       with:
-          name: playwright-report
-          path: playwright-report
+          name: playwright-report-using-docker
+          path: ./test-results
 
