--- a/.github/github-execution.yml
+++ b/.github/github-execution.yml
@@ -2,7 +2,7 @@ name: E2E Test execution on GitHub using github actions
 
 on:
   push:
-      branch : [main]
+      branches : ["main"]
 
 jobs:
    - job: e2e test execution of API and UI
