Gihub actions yaml updated with repo checkou details

--- a/.github/github-execution.yml
+++ b/.github/github-execution.yml
@@ -2,18 +2,30 @@ name: E2E Test execution on GitHub using github actions
 
 on:
   push:
-      branches : ["main"]
+    branches: [ "main" ]
 
 jobs:
-   - job: e2e test execution of API and UI
-     runs-on: ubuntu-latest
+  e2e-tests:
+    name: E2E test execution of API and UI
+    runs-on: ubuntu-latest
 
-     steps:
-     - name: Run E2E tests
-       run: npx playwright tests
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
-     - name: Upload test report
-       uses: actions/upload-artifact@v4
-       with:
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 18
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Run E2E tests
+        run: npx playwright test
+
+      - name: Upload test report
+        uses: actions/upload-artifact@v4
+        with:
           name: playwright-report-using-githubactions
           path: ./test-results
